--- a/src/app/vote/vote.component.html
+++ b/src/app/vote/vote.component.html
@@ -1,78 +1,206 @@
+
+  
 <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="center">
-    <mat-tab label="Candidatos">
-        <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
+    <mat-tab label="Candidatos" >
+        <div *ngIf="hascandidates == false">
+            <h5 class="warning">aun no se registran candidatos</h5>
+        </div>
+        <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start" *ngIf="hascandidates == true">
+           
             <mat-tab label="Personero">
-             
+                <div *ngIf="showPersonero==false">
+                    <h5 class="success">ya has votado por personero/a</h5>
+                </div>
+                <div class="candidates-container"*ngIf="showPersonero==true">
+                    <mat-card *ngFor="let candidate of arrayPersonberos" class="candidate-card">
+                      <mat-card-header>
+                        <mat-card-title>{{ candidate.nombre }}</mat-card-title>
+                        <mat-card-subtitle>{{ candidate.descripcion }}</mat-card-subtitle>
+                      </mat-card-header>
+                      
+                      <img mat-card-image  alt="Foto del candidato">
+                      <!-- src="../assets/default-user.jpg" -->
+                      <mat-card-content>
+                         <p>Descripcion</p>
+                        <!--<p><strong>Grado:</strong> {{ candidate.grado }}</p> -->
+                      </mat-card-content>
+                      
+                      <mat-card-actions>
+                        <button mat-button color="primary" (click)="vote(candidate)">Votar</button>
+                      </mat-card-actions>
+                    </mat-card>
+                  </div>
+                  
             </mat-tab>
-            <mat-tab label="Contralora">
-                <!-- Puedes agregar otra tabla aquí si es necesario -->
+            <mat-tab label="Contralora" >
+                <div *ngIf="showContralor==false">
+                    <h5 class="success">ya has votado por contralor/a</h5>
+                </div>
+                <div class="candidates-container" *ngIf="showContralor==true">
+                    <mat-card *ngFor="let candidate of arrayContralores" class="candidate-card">
+                      <mat-card-header>
+                        <mat-card-title>{{ candidate.nombre }}</mat-card-title>
+                        <mat-card-subtitle>{{ candidate.descripcion }}</mat-card-subtitle>
+                      </mat-card-header>
+                      
+                      <img mat-card-image  alt="Foto del candidato">
+
+                      
+                      <!-- src="../assets/default-user.jpg" -->
+                      <mat-card-content>
+                         <p>Descripcion</p>
+                        <!--<p><strong>Grado:</strong> {{ candidate.grado }}</p> -->
+                      </mat-card-content>
+                      
+                      <mat-card-actions>
+                        <button mat-button color="primary" (click)="vote(candidate)">Votar</button>
+                      </mat-card-actions>
+                    </mat-card>
+                  </div>
             </mat-tab>
         </mat-tab-group>
     </mat-tab>
+
+
+
+
+    <!--segundo tab------------------------------------------------------->
     <mat-tab label="Ingreso de candidatos">
-        <mat-divider>
-
-
-        </mat-divider>
-        <button mat-flat-button
-        style="border-radius: 20px;" 
-        (click)="createCantidates()" 
-        [disabled]="selectedStudents.length === 0">
-  Guardar candidatos
-</button>
-
-
-        <div class="table-container">
-            <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-                <!-- Selecciona Checkbox -->
-                <ng-container matColumnDef="selecciona">
-                    <th mat-header-cell *matHeaderCellDef> Selecciona </th>
-                    <td mat-cell *matCellDef="let student">
-                        <mat-checkbox 
-                            (change)="toggleSelection(student)"
-                            [checked]="selectedStudents.includes(student)">
-                        </mat-checkbox>
-                    </td>
-                </ng-container>
-            
-                <!-- ID -->
-                <ng-container matColumnDef="id">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-                    <td mat-cell *matCellDef="let student"> {{ student.id }} </td>
-                </ng-container>
-            
-                <!-- Nombre -->
-                <ng-container matColumnDef="nombre">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
-                    <td mat-cell *matCellDef="let student"> {{ student.nombre }} </td>
-                </ng-container>
-            
-                <!-- Edad -->
-                <ng-container matColumnDef="edad">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Edad </th>
-                    <td mat-cell *matCellDef="let student"> {{ student.edad }} </td>
-                </ng-container>
-            
-                <!-- Grado -->
-                <ng-container matColumnDef="grado">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Grado </th>
-                    <td mat-cell *matCellDef="let student"> {{ student.grado }} </td>
-                </ng-container>
-            
-                <!-- Número de Identificación -->
-                <ng-container matColumnDef="num_identificacion">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> ID Número </th>
-                    <td mat-cell *matCellDef="let student"> {{ student.num_identificacion }} </td>
-                </ng-container>
-            
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            </table>
-            
-            <mat-paginator [pageSize]="15" [pageSizeOptions]="[5, 10, 15, 20]" showFirstLastButtons></mat-paginator>
-            
-
         
+        <mat-divider>
+        </mat-divider>
+        <div  *ngIf="hascandidates == true">
+            <div style="text-align: center;">
+                <h5 class="warning">Ya has registrado candidatos para esta elección </h5> 
+                </div>
         </div>
+      <div  *ngIf="hascandidates == false">
+        <div style="text-align: center;" >
+            <h5>Selecciona los estudiantes que deseas registrar como candidatos</h5> 
+          </div>
+          
+    
+          <div *ngIf="loading" class="d-flex justify-content-center align-items-center" style="height: 100px;">
+            <div class="spinner-border text-warning" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
+          </div>
+          <input matInput (keyup)="applyGlobalFilter($event)" placeholder="Buscar"  class="global-filter">
+          <button 
+          class="button-save"
+          *ngIf="selectedStudents.length > 0 && hascandidates == false"
+          mat-flat-button
+          matTooltip="Guardar candidatos"
+          matTooltipPosition="above"
+          style="border-radius: 20px;" 
+          (click)="createCandidates()">
+          <i class="fa fa-save" style="color:rgb(0, 0, 0)"></i>
+        </button>
+      </div>
+            <div class="table-container">
+                <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+            
+         
+                    <!-- Selecciona Checkbox -->
+                    <ng-container matColumnDef="selecciona" >
+                        <th mat-header-cell *matHeaderCellDef> Selecciona   <i class='fa fa-check'></i></th>
+                     
+                        <td mat-cell *matCellDef="let student">
+                            <mat-checkbox 
+                                (change)="toggleSelection(student)"
+                                [checked]="selectedStudents.includes(student)">
+                            </mat-checkbox>
+                        </td>
+                    </ng-container>
+                
+                    <!-- ID -->
+                    <ng-container matColumnDef="id">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+                        <td mat-cell *matCellDef="let student"> {{ student.id }} </td>
+                    </ng-container>
+                
+                    <!-- Nombre -->
+                    <ng-container matColumnDef="nombre">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
+                        <td mat-cell *matCellDef="let student"> {{ student.nombre }} </td>
+                    </ng-container>
+                
+                    <!-- Edad -->
+                    <ng-container matColumnDef="edad">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Edad </th>
+                        <td mat-cell *matCellDef="let student"> {{ student.edad }} </td>
+                    </ng-container>
+                
+                    <!-- Grado -->
+                    <ng-container matColumnDef="grado">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Grado </th>
+                        <td mat-cell *matCellDef="let student"> {{ student.grado }} </td>
+                    </ng-container>
+                
+                    <!-- Número de Identificación -->
+                    <ng-container matColumnDef="num_identificacion">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de identificacion</th>
+                        <td mat-cell *matCellDef="let student"> {{ student.num_identificacion }} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="Seleccionado">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Seleccionado </th>
+              
+                        <td [ngClass]="{'bg-success': student.seleccionado === 'Sí'}" mat-cell *matCellDef="let student"> 
+                            {{ student.seleccionado }} 
+                          </td>
+                          
+                    </ng-container>
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
+                
+                <mat-paginator [pageSize]="15" [pageSizeOptions]="[5, 10, 15, 20]" showFirstLastButtons></mat-paginator>
+                
+    
+            
+            </div>
+      
+    
     </mat-tab>
+
+    
+    <!--tercer tab-------------------------------------------------------->
+  
+    <mat-tab label="Votos">
+      <div style="text-align: center;">
+        <strong style="display: block; margin-bottom: 10px; font-size: 18px;">Votos totales de la elección</strong>
+        
+        <div style="display: flex; justify-content: center; gap: 20px;">
+          <h6>Personero</h6>
+          <ngx-charts-bar-vertical
+            [view]="view"
+            [scheme]="colorScheme"
+            [results]="data"
+            [gradient]="false"
+            [xAxis]="true"
+            [yAxis]="true"
+            [legend]="true"
+            [showDataLabel]="true">
+          </ngx-charts-bar-vertical>
+          <h6>Contralor</h6>
+          
+          <ngx-charts-bar-vertical
+            [view]="view"
+            [scheme]="colorScheme"
+            [results]="data2"
+            [gradient]="false"
+            [xAxis]="true"
+            [yAxis]="true"
+            [legend]="true"
+            [showDataLabel]="true">
+          </ngx-charts-bar-vertical>
+        </div>
+      </div>
+      
+</mat-tab>
+
+  
+   
+      
+      
 </mat-tab-group>
