--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,14 +1,40 @@
 <div class="login-container">
-  <h2>Iniciar Sesión</h2>
+ 
+  
+  <div class="carrusel">
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="https://via.placeholder.com/800x400" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="https://via.placeholder.com/800x400/ff0000" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="https://via.placeholder.com/800x400/00ff00" alt="Third slide">
+        </div>
+      </div>
+    </div>
+  </div>
   <form [formGroup]="loginForm" (ngSubmit)="authLogin()">
-    <label for="correo">Correo</label>
+    <div class="logo">
+      <img  class="icono" src="favicon.ico" alt="Logo">
+  
+    </div>
+  <h2>Iniciar Sesión</h2>
+
+    <label for="correo">Identificación</label>
     <input id="correo" type="email" formControlName="correo" required>
     
     <label for="contraseña">Contraseña</label>
     <input id="contraseña" type="password" formControlName="contraseña" required>
     
     <button type="submit" [disabled]="loginForm.invalid">Ingresar</button>
+    <p *ngIf="errorMessage" class="error">{{ errorMessage }}</p>
+    <br>
+    <div class="footer">
+      <p>© 2022 <br>IEM Antonio Nariño</p>  
+    </div>
   </form>
-
-  <p *ngIf="errorMessage" class="error">{{ errorMessage }}</p>
 </div>
+
