llogin cambiado y creacion inventario

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,13 +5,13 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="https://via.placeholder.com/800x400" alt="First slide">
+          <img class="d-block w-100" src="/src/app/assets/1.1.jpeg" alt="First slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="https://via.placeholder.com/800x400/ff0000" alt="Second slide">
+          <img class="d-block w-100" src="assets/2.jpeg" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="https://via.placeholder.com/800x400/00ff00" alt="Third slide">
+          <img class="d-block w-100" src="assets/3.jpeg" alt="Third slide">
         </div>
       </div>
     </div>
@@ -23,8 +23,8 @@
     </div>
   <h2>Iniciar Sesión</h2>
 
-    <label for="correo">Identificación</label>
-    <input id="correo" type="email" formControlName="correo" required>
+    <label for="num_identificacion">Identificación</label>
+    <input id="num_identificacion" formControlName="num_identificacion" required>
     
     <label for="contraseña">Contraseña</label>
     <input id="contraseña" type="password" formControlName="contraseña" required>
