--- a/src/app/inventario/inventario.component.html
+++ b/src/app/inventario/inventario.component.html
@@ -1,1 +1,15 @@
-<p>inventario works!</p>
+<mat-tab-group>
+    <mat-tab label="Bienes">
+      <!-- <app-bienes-list></app-bienes-list> -->
+    </mat-tab>
+    <mat-tab label="Ingreso">
+      <!-- <app-ingreso-form></app-ingreso-form> -->
+    </mat-tab>
+    <mat-tab label="Salida">
+      <!-- <app-salida-form></app-salida-form> -->
+    </mat-tab>
+    <mat-tab label="Historial">
+      <!-- <app-historial></app-historial> -->
+    </mat-tab>
+  </mat-tab-group>
+  
