--- a/src/app/vote/vote.component.html
+++ b/src/app/vote/vote.component.html
@@ -11,25 +11,26 @@
                 <div *ngIf="showPersonero==false">
                     <h5 class="success">ya has votado por personero/a</h5>
                 </div>
-                <div class="candidates-container"*ngIf="showPersonero==true">
-                    <mat-card *ngFor="let candidate of arrayPersonberos" class="candidate-card">
-                      <mat-card-header>
-                        <mat-card-title>{{ candidate.nombre }}</mat-card-title>
-                        <mat-card-subtitle>{{ candidate.descripcion }}</mat-card-subtitle>
-                      </mat-card-header>
-                      
-                      <img mat-card-image  alt="Foto del candidato">
-                      <!-- src="../assets/default-user.jpg" -->
-                      <mat-card-content>
-                         <p>Descripcion</p>
-                        <!--<p><strong>Grado:</strong> {{ candidate.grado }}</p> -->
-                      </mat-card-content>
-                      
-                      <mat-card-actions>
-                        <button mat-button color="primary" (click)="vote(candidate)">Votar</button>
-                      </mat-card-actions>
-                    </mat-card>
-                  </div>
+                <div class="candidates-container" *ngIf="showPersonero==true">
+                  <mat-card *ngFor="let candidate of arrayPersonberos" class="candidate-card">
+                    <mat-card-header>
+                      <mat-card-title>{{ candidate.nombre }}</mat-card-title>
+                      <mat-card-subtitle>{{ candidate.descripcion }}</mat-card-subtitle>
+                    </mat-card-header>
+                    
+                    <img mat-card-image [src]="'assets/default-user.jpg'" alt="Foto del candidato">
+                    
+                    <mat-card-content>
+                      <p>Descripción</p>
+                      <!--<p><strong>Grado:</strong> {{ candidate.grado }}</p> -->
+                    </mat-card-content>
+                    
+                    <mat-card-actions>
+                      <button mat-button color="primary" (click)="vote(candidate)">Votar</button>
+                    </mat-card-actions>
+                  </mat-card>
+                </div>
+                
                   
             </mat-tab>
             <mat-tab label="Contralora" >
