--- a/src/app/vote/vote.component.html
+++ b/src/app/vote/vote.component.html
@@ -98,68 +98,70 @@
           <i class="fa fa-save" style="color:rgb(0, 0, 0)"></i>
         </button>
       </div>
-            <div class="table-container">
-                <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-            
-         
-                    <!-- Selecciona Checkbox -->
-                    <ng-container matColumnDef="selecciona" >
-                        <th mat-header-cell *matHeaderCellDef> Selecciona   <i class='fa fa-check'></i></th>
-                     
-                        <td mat-cell *matCellDef="let student">
-                            <mat-checkbox 
-                                (change)="toggleSelection(student)"
-                                [checked]="selectedStudents.includes(student)">
-                            </mat-checkbox>
-                        </td>
-                    </ng-container>
-                
-                    <!-- ID -->
-                    <ng-container matColumnDef="id">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-                        <td mat-cell *matCellDef="let student"> {{ student.id }} </td>
-                    </ng-container>
-                
-                    <!-- Nombre -->
-                    <ng-container matColumnDef="nombre">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
-                        <td mat-cell *matCellDef="let student"> {{ student.nombre }} </td>
-                    </ng-container>
-                
-                    <!-- Edad -->
-                    <ng-container matColumnDef="edad">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Edad </th>
-                        <td mat-cell *matCellDef="let student"> {{ student.edad }} </td>
-                    </ng-container>
-                
-                    <!-- Grado -->
-                    <ng-container matColumnDef="grado">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Grado </th>
-                        <td mat-cell *matCellDef="let student"> {{ student.grado }} </td>
-                    </ng-container>
-                
-                    <!-- Número de Identificación -->
-                    <ng-container matColumnDef="num_identificacion">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de identificacion</th>
-                        <td mat-cell *matCellDef="let student"> {{ student.num_identificacion }} </td>
-                    </ng-container>
-                    <ng-container matColumnDef="Seleccionado">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Seleccionado </th>
-              
-                        <td [ngClass]="{'bg-success': student.seleccionado === 'Sí'}" mat-cell *matCellDef="let student"> 
-                            {{ student.seleccionado }} 
-                          </td>
-                          
-                    </ng-container>
-                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                </table>
-                
-                <mat-paginator [pageSize]="15" [pageSizeOptions]="[5, 10, 15, 20]" showFirstLastButtons></mat-paginator>
-                
-    
-            
-            </div>
+         <!-- Tabla con lista de estudiantes -->
+<div class="table-container">
+  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+
+      <!-- Selecciona Checkbox -->
+      <ng-container matColumnDef="selecciona">
+          <th mat-header-cell *matHeaderCellDef> Selecciona <i class='fa fa-check'></i></th>
+          <td mat-cell *matCellDef="let student">
+              <mat-checkbox 
+                  (change)="toggleSelection(student)" 
+                  [checked]="selectedStudents.includes(student)">
+              </mat-checkbox>
+          </td>
+      </ng-container>
+
+      <!-- ID -->
+      <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+          <td mat-cell *matCellDef="let student"> {{ student.id }} </td>
+      </ng-container>
+
+      <!-- Nombre -->
+      <ng-container matColumnDef="nombre">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
+          <td mat-cell *matCellDef="let student"> {{ student.nombre }} </td>
+      </ng-container>
+
+      <!-- Edad -->
+      <ng-container matColumnDef="edad">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Edad </th>
+          <td mat-cell *matCellDef="let student"> {{ student.edad }} </td>
+      </ng-container>
+
+      <!-- Grado -->
+      <ng-container matColumnDef="grado">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Grado </th>
+          <td mat-cell *matCellDef="let student"> {{ student.grado }} </td>
+      </ng-container>
+
+      <!-- Número de Identificación -->
+      <ng-container matColumnDef="num_identificacion">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de Identificación </th>
+          <td mat-cell *matCellDef="let student"> {{ student.num_identificacion }} </td>
+      </ng-container>
+
+      <!-- Seleccionado -->
+      <ng-container matColumnDef="Seleccionado">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Seleccionado </th>
+          <td  mat-cell *matCellDef="let student">
+              {{ student.seleccionado }} 
+              <!-- Botón para eliminar si está seleccionado -->
+              <button *ngIf="student.seleccionado === 'Sí'" mat-icon-button (click)="removeCandidate(student)">
+                  <i class="fa fa-trash" style="color: red;"></i>
+              </button>
+          </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+  <mat-paginator [pageSize]="15" [pageSizeOptions]="[5, 10, 15, 20]" showFirstLastButtons></mat-paginator>
+</div>
+
       
     
     </mat-tab>
