--- a/src/app/inventario/inventario.component.html
+++ b/src/app/inventario/inventario.component.html
@@ -18,13 +18,13 @@
           <tbody>
             <tr *ngFor="let property of lspropierties; let i = index">
               <td>
-                <input type="text" [(ngModel)]="property.detalle" placeholder="Ingrese detalle" required>
+                <input type="text" class="form-control" [(ngModel)]="property.detalle" placeholder="Ingrese detalle" required>
               </td>
               <td>
-                <input type="number" [(ngModel)]="property.costo" placeholder="Ingrese costo" required>
+                <input type="number"class="form-control" [(ngModel)]="property.costo" placeholder="Ingrese costo" required>
               </td>
               <td>
-                <select [(ngModel)]="property.tipo" required>
+                <select class="form-select"[(ngModel)]="property.tipo" required>
                   <option value="" disabled>Seleccione un tipo</option>
                   <option *ngFor="let type of types" [value]="type.id">
                     {{ type.detalle }}
@@ -32,19 +32,19 @@
                 </select>
               </td>
               <td>
-                <button type="button" (click)="removeProperty(i)" *ngIf="lspropierties.length > 1">
+                <a type="button"  class="btn btn-outline-danger" (click)="removeProperty(i)" *ngIf="lspropierties.length > 1">
                   ❌ Eliminar
-                </button>
+                </a>
               </td>
             </tr>
           </tbody>
         </table>
       
         <!-- Botón para agregar otro bien -->
-        <button type="button" (click)="addToList()">➕ Agregar otro bien</button>
-      
+        <a type="button" class="btn btn-outline-primary"   (click)="addToList()">➕ Agregar otro bien</a>
+       &nbsp;
         <!-- Botón para enviar el formulario -->
-        <button type="button" (click)="createproperty()">💾 Guardar bienes</button>
+        <a type="button" class="btn btn-outline-success" (click)="createproperty()">💾 Guardar bienes</a>
       </div>
       
       
