--- a/src/app/vote/vote.component.html
+++ b/src/app/vote/vote.component.html
@@ -32,7 +32,7 @@
             <mat-card-header>
               <mat-card-title>Voto en Blanco</mat-card-title>
             </mat-card-header>
-            <img mat-card-image src="http://localhost:3525/uploads/voto-blanco.jpeg" alt="Voto en Blanco">
+            <img mat-card-image src="https://backend-inedan.onrender.com/uploads/voto-blanco.jpeg" alt="Voto en Blanco">
             <mat-card-content>
               <p>Si no deseas elegir a ningún candidato, puedes votar en blanco.</p>
             </mat-card-content>
